alife poster and mobile
alife poster and mobile

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -2758,7 +2758,7 @@
 					<key>page30 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2802,6 +2802,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-ab9f56e.png</key>
 							<dict>
@@ -2847,11 +2867,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z0FX5PaCvj0v
-								O5KnB0deVw==
+								KCmWW4hbDYV/
+								5cOuj9mfcQ==
 								</data>
 								<key>Size</key>
-								<integer>54170</integer>
+								<integer>54574</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11290,7 +11310,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11485,6 +11505,26 @@
 								<key>Size</key>
 								<integer>58637</integer>
 							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-67b56a5.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -11655,6 +11695,26 @@
 								<key>Size</key>
 								<integer>18900</integer>
 							</dict>
+							<key>files/stacks-image-fec4b4d-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-fec4b4d-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-ffaa771.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -11669,11 +11729,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TS6PnfaY70ew
-								leKssSteHg==
+								rbAqlQUC88Di
+								ZPAqFm9erA==
 								</data>
 								<key>Size</key>
-								<integer>241519</integer>
+								<integer>238525</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -11689,11 +11749,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xvSk7WT+/gz9
-								OJfleVKy/w==
+								x15wJ9QQzLPG
+								iqd82PtoKQ==
 								</data>
 								<key>Size</key>
-								<integer>163559</integer>
+								<integer>162685</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11706,7 +11766,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11811,6 +11871,26 @@
 								<key>Size</key>
 								<integer>69363</integer>
 							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-6ce21ba-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -11885,11 +11965,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s/OAzd20s8/h
-								6HPtWK2PFQ==
+								k5yrBiyVRxgW
+								JpCVT/T1IQ==
 								</data>
 								<key>Size</key>
-								<integer>109317</integer>
+								<integer>109721</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13454,7 +13534,7 @@
 					<key>page72 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13498,6 +13578,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-d815a41.png</key>
 							<dict>
@@ -13543,11 +13643,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BDFRiz2DgMx8
-								J0Jj8wFi3w==
+								GlfWzYvJ2L94
+								mpyMl7Z3JA==
 								</data>
 								<key>Size</key>
-								<integer>62676</integer>
+								<integer>63080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13752,7 +13852,7 @@
 					<key>page75 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13807,6 +13907,26 @@
 								<key>Size</key>
 								<integer>6879</integer>
 							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-80c235e.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -13851,11 +13971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N/j82qDWd9tL
-								8yJs5WTFFg==
+								CkN4iVfULxNp
+								9FTU9ImzKQ==
 								</data>
 								<key>Size</key>
-								<integer>65450</integer>
+								<integer>65854</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13868,7 +13988,7 @@
 					<key>page76 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13923,6 +14043,26 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -13957,11 +14097,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JPoVwhCtMkra
-								7LP8NcwA0w==
+								9m4Vid/RWmSN
+								i/H21AW45g==
 								</data>
 								<key>Size</key>
-								<integer>57521</integer>
+								<integer>57925</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13974,7 +14114,7 @@
 					<key>page77 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14079,6 +14219,26 @@
 								<key>Size</key>
 								<integer>32936</integer>
 							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
+							</dict>
 							<key>files/stacks-image-8147c3d-350x450.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -14163,11 +14323,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CDwSxaTePnz2
-								A9NiXeTJIg==
+								wCfDQrKsUv59
+								3OBkqSxqUg==
 								</data>
 								<key>Size</key>
-								<integer>79568</integer>
+								<integer>79972</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14180,7 +14340,7 @@
 					<key>page78 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14264,6 +14424,26 @@
 								</data>
 								<key>Size</key>
 								<integer>18305</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-7d9976e-150x128.png</key>
 							<dict>
@@ -14419,11 +14599,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n9A5Vdj9W+wr
-								g54+fp8Cgw==
+								Dn82jw0Gbu+l
+								9tzH2HAwvA==
 								</data>
 								<key>Size</key>
-								<integer>74784</integer>
+								<integer>75188</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14436,7 +14616,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14560,6 +14740,26 @@
 								</data>
 								<key>Size</key>
 								<integer>58637</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-67b56a5.jpg</key>
 							<dict>
@@ -14725,11 +14925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SY0eFrj45Ev9
-								LnOjWvGBbw==
+								efeJZvE09t1G
+								L3irKYiXhA==
 								</data>
 								<key>Size</key>
-								<integer>121275</integer>
+								<integer>121679</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14964,7 +15164,7 @@
 					<key>page81 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15008,6 +15208,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-6b4ca1c.png</key>
 							<dict>
@@ -15053,11 +15273,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Yjv8k9OPG1aJ
-								Ff3j+T9UNA==
+								bDam9JmeKFGp
+								TXU/+Z6eeQ==
 								</data>
 								<key>Size</key>
-								<integer>59898</integer>
+								<integer>60302</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15070,7 +15290,7 @@
 					<key>page82 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15114,6 +15334,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-86d5f9f.png</key>
 							<dict>
@@ -15159,11 +15399,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vJczwlrn5Suf
-								zwgh4llvRg==
+								nXuFqUlMhzDd
+								d1kjrh2MOQ==
 								</data>
 								<key>Size</key>
-								<integer>57949</integer>
+								<integer>58353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16192,7 +16432,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-25T17:22:26Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16221,11 +16461,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bcnMfFhEdSDN
-								E58Ft2XOfw==
+								ScsObnEvX/3Y
+								5bMYW2LRQQ==
 								</data>
 								<key>Size</key>
-								<integer>5658</integer>
+								<integer>5690</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16304,7 +16544,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17383,11 +17623,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RYP+jvUdhNdL
-								BK9zPpUSew==
+								x9G7+Qioq2Gp
+								Qo1BbDIuhQ==
 								</data>
 								<key>Size</key>
-								<integer>3793</integer>
+								<integer>4607</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17543,8 +17783,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwbhj
-				KMTHqIAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwbjt
+				19OygYAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17554,14 +17794,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBuGMoxMhHgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBuO3X07NCgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcG4YyjEyHqADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcG47dfTs32ADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17570,8 +17810,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcG4YyjE
-				yJuADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcG47dfT
+				s56ADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17580,7 +17820,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcG4YyjEyMWADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcG47dfTs8CADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
