--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -119,6 +119,26 @@
 								</data>
 								<key>Size</key>
 								<integer>18305</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-7d9976e-150x128.png</key>
 							<dict>
@@ -274,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n9A5Vdj9W+wr
-								g54+fp8Cgw==
+								Dn82jw0Gbu+l
+								9tzH2HAwvA==
 								</data>
 								<key>Size</key>
-								<integer>74784</integer>
+								<integer>75188</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
