--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-04T20:49:18Z</date>
+						<date>2019-11-05T16:32:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -159,6 +159,26 @@
 								</data>
 								<key>Size</key>
 								<integer>58637</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JzGDCTr3VpQ9
+								ZXa76S/QnA==
+								</data>
+								<key>Size</key>
+								<integer>379215</integer>
+							</dict>
+							<key>files/stacks-image-63bfdf1-898x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9Q9bA8/nbmZM
+								L3BvVZFtbw==
+								</data>
+								<key>Size</key>
+								<integer>623013</integer>
 							</dict>
 							<key>files/stacks-image-67b56a5.jpg</key>
 							<dict>
@@ -324,11 +344,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SY0eFrj45Ev9
-								LnOjWvGBbw==
+								efeJZvE09t1G
+								L3irKYiXhA==
 								</data>
 								<key>Size</key>
-								<integer>121275</integer>
+								<integer>121679</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
