--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/08-Science-Olympiad/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/08-Science-Olympiad/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-25T17:22:26Z</date>
+						<date>2019-11-06T19:34:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WAQFzQI6UFxA
-								ivh4ouMdfw==
+								j1IK7yxDWJiy
+								Bo2wWEStsg==
 								</data>
 								<key>Size</key>
-								<integer>55702</integer>
+								<integer>55683</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
