ALife deadline change
ALife deadline change

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -2758,7 +2758,7 @@
 					<key>page30 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-12T14:51:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2867,11 +2867,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KCmWW4hbDYV/
-								5cOuj9mfcQ==
+								mLLM5zdXvnFC
+								4tbGNkMRpw==
 								</data>
 								<key>Size</key>
-								<integer>54574</integer>
+								<integer>54671</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11310,7 +11310,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-12T14:54:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11729,11 +11729,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rbAqlQUC88Di
-								ZPAqFm9erA==
+								I38nX829KiKD
+								ZKpuwFtenw==
 								</data>
 								<key>Size</key>
-								<integer>238525</integer>
+								<integer>250129</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -11749,11 +11749,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								x15wJ9QQzLPG
-								iqd82PtoKQ==
+								kVrJhxmCYCCR
+								QbadXLjc0g==
 								</data>
 								<key>Size</key>
-								<integer>162685</integer>
+								<integer>171292</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11766,7 +11766,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-12T14:54:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11965,11 +11965,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k5yrBiyVRxgW
-								JpCVT/T1IQ==
+								UGxhnP2tivmW
+								WMJivZX4Fg==
 								</data>
 								<key>Size</key>
-								<integer>109721</integer>
+								<integer>109919</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13988,7 +13988,7 @@
 					<key>page76 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-12T14:51:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14097,11 +14097,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9m4Vid/RWmSN
-								i/H21AW45g==
+								hDrYOcPpdMAF
+								ekKVwIsC1A==
 								</data>
 								<key>Size</key>
-								<integer>57925</integer>
+								<integer>58001</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16432,7 +16432,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-06T19:34:59Z</date>
+						<date>2019-11-12T14:54:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16461,11 +16461,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bcnMfFhEdSDN
-								E58Ft2XOfw==
+								VSQyGH5gPuIr
+								HgzrWE7bAw==
 								</data>
 								<key>Size</key>
-								<integer>5658</integer>
+								<integer>5754</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16544,7 +16544,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-06T19:34:59Z</date>
+						<date>2019-11-12T14:54:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17623,11 +17623,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								S8EtDiJF1tQn
-								oUmumcfZEA==
+								IA5fuc6ADPSk
+								HpZQY/01EA==
 								</data>
 								<key>Size</key>
-								<integer>3793</integer>
+								<integer>4607</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17783,8 +17783,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwbmr
-				8uzkO4AO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwb1/
+				l3e1hYAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17794,14 +17794,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBuavy7OTSgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBvX+Xd7YDgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcG5q/Ls5QSADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcG9f5d3tjWADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17810,8 +17810,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcG5q/Ls
-				5SaADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcG9f5d3
+				tlaADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17820,7 +17820,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcG5q/Ls5T+ADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcG9f5d3tnCADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
