--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-12T14:54:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -454,11 +454,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rbAqlQUC88Di
-								ZPAqFm9erA==
+								I38nX829KiKD
+								ZKpuwFtenw==
 								</data>
 								<key>Size</key>
-								<integer>238525</integer>
+								<integer>250129</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -474,11 +474,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								x15wJ9QQzLPG
-								iqd82PtoKQ==
+								kVrJhxmCYCCR
+								QbadXLjc0g==
 								</data>
 								<key>Size</key>
-								<integer>162685</integer>
+								<integer>171292</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
