--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-12T14:54:37Z</date>
+						<date>2019-11-14T14:10:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -474,11 +474,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kVrJhxmCYCCR
-								QbadXLjc0g==
+								smDrYSetHngd
+								KX6xlUmudA==
 								</data>
 								<key>Size</key>
-								<integer>171292</integer>
+								<integer>171295</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
